# langr

./: .gitignore  CMakeLists.txt  CMakePresets.json  run.sh
ch2/: CMakeLists.txt  Soundex.cpp  Soundex.h  TestSoundex.cpp
